HelloUltraviolet/Fixtures/RejectedSource/Expressions/RawDerefUnsafeRequirement/Source/Main.uv
//! Rejected raw dereference specimen for unsafe-span typing.

public procedure rawDerefUnsafeRequirementReference(pointer: *imm i32) -> i32 {
    return *pointer
}
